force-app/main/default/objects/OtherChargeCredit__c/OtherChargeCredit__c.object-meta.xml
<CustomObject>
    <description>Object to hold Other Charges and Credits</description>
    <label>Other Charge or Credit</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>OtherChargeCredit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Charges Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>