force-app/main/default/objects/OtherChargeCredit__c/fields/AccessCode__c.field-meta.xml
<CustomField>
    <fullName>AccessCode__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Access Code</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Other Charges Credits</relationshipLabel>
    <relationshipName>OtherChargesCredits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>