force-app/main/default/objects/OtherChargeCredit__c/fields/BilledDate__c.field-meta.xml
<CustomField>
    <fullName>BilledDate__c</fullName>
    <label>Billed Date</label>
    <type>Date</type>
</CustomField>