force-app/main/default/objects/OtherChargeCredit__c/fields/ChargeOrCredit__c.field-meta.xml
<CustomField>
    <fullName>ChargeOrCredit__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Charge/(Credit) Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>