force-app/main/default/objects/OtherChargeCredit__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>(AccessCode__r.Contact__r.FirstName &amp;&quot;  &quot;&amp; AccessCode__r.Contact__r.LastName)</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>