force-app/main/default/objects/OtherChargeCredit__c/fields/Credit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reason__c</fullName>
    <label>Credit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Event Services</fullName>
            </value>
            <value>
                <fullName>Product Change</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Service Interruption</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>