force-app/main/default/objects/OtherChargeCredit__c/fields/Date_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Date_Deleted__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
The date that this record was deleted.</description>
    <label>Date Deleted</label>
    <type>DateTime</type>
</CustomField>