force-app/main/default/objects/OtherChargeCredit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Event Info Only. Information will be printed on invoice.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>