force-app/main/default/objects/OtherChargeCredit__c/fields/Event_Charge_Reason__c.field-meta.xml
<CustomField>
    <fullName>Event_Charge_Reason__c</fullName>
    <label>Event Charge Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Minutes</fullName>
            </value>
            <value>
                <fullName>Additional Participants</fullName>
            </value>
            <value>
                <fullName>Audio + Slides Webcast / 150 Participants - Base Price</fullName>
            </value>
            <value>
                <fullName>Audio + Slides Webcast - Base Price</fullName>
            </value>
            <value>
                <fullName>Base Rate</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Event Manager Assisted - Recording</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Live Webinars</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - On Demand - Recording</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Operator Assisted Live - Webinars</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Vidyard Recording - Hosting</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Webcasting</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Closed Captioning</fullName>
            </value>
            <value>
                <fullName>Communication Line</fullName>
            </value>
            <value>
                <fullName>Dress Rehearsal</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
            <value>
                <fullName>Event Call Director</fullName>
            </value>
            <value>
                <fullName>Extended Archive Hosting</fullName>
            </value>
            <value>
                <fullName>Full Event Moderation</fullName>
            </value>
            <value>
                <fullName>International Toll-Free Add-On</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platinum Elite Webcast / 150 Participants - Base Price</fullName>
            </value>
            <value>
                <fullName>Platinum Elite Webcast- Base Price</fullName>
            </value>
            <value>
                <fullName>Platinum Plus Webcast / 150 Participants - Base Price</fullName>
            </value>
            <value>
                <fullName>Platinum Plus Webcast - Base Price</fullName>
            </value>
            <value>
                <fullName>Premium Op-Assist Add-On</fullName>
            </value>
            <value>
                <fullName>Set-Up &amp; Customization</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Transcription Services</fullName>
            </value>
            <value>
                <fullName>Unused Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>