force-app/main/default/objects/OtherChargeCredit__c/fields/FinReq_Comments__c.field-meta.xml
<CustomField>
    <fullName>FinReq_Comments__c</fullName>
    <description>Internal Comments from Financial Requests</description>
    <label>FinReq Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>