force-app/main/default/objects/OtherChargeCredit__c/fields/Inactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_By__c</fullName>
    <description>The user that deleted this record.</description>
    <label>Deleted By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>