force-app/main/default/objects/OtherChargeCredit__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Insert details for internal review. This information is NOT printed on the invoice.</description>
    <inlineHelpText>Insert details for internal review. This information is NOT printed on the invoice.</inlineHelpText>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>