force-app/main/default/objects/OtherChargeCredit__c/fields/OtherChargeCreditId__c.field-meta.xml
<CustomField>
    <fullName>OtherChargeCreditId__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>OtherChargeCreditId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>