force-app/main/default/objects/OtherChargeCredit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blackberry Charge - Event Manager Assisted - Recording</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Live Webinars</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - On Demand - Recording</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Operator Assisted Live - Webinars</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Vidyard Recording -  Hosting</fullName>
            </value>
            <value>
                <fullName>Blackberry Charge - Webcasting</fullName>
            </value>
            <value>
                <fullName>Charge - Audio 300 Port Capacity Upgrade</fullName>
            </value>
            <value>
                <fullName>Charge - Broadcast Audio - Additional Minutes</fullName>
            </value>
            <value>
                <fullName>Charge - Broadcast Audio - Additional Participants</fullName>
            </value>
            <value>
                <fullName>Charge - Broadcast Audio - Base Price</fullName>
            </value>
            <value>
                <fullName>Charge - Closed Captioning Services</fullName>
            </value>
            <value>
                <fullName>Charge - Corporate License Subscription</fullName>
            </value>
            <value>
                <fullName>Charge - Custom Start Page - Annual Maintenance</fullName>
            </value>
            <value>
                <fullName>Charge - Custom Start Page - Set-up</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Add&apos;l Monitoring &amp; Support</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Cancellation</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Communication Line</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Dress Rehearsal w/ Op. Svcs.</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Dry Run</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Event Call Director</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Full Event Moderation</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Other</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Pre-record</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Re-record</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Simulive - Additional Minutes</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Simulive - Base Price</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Transcription Services</fullName>
            </value>
            <value>
                <fullName>Charge - Event Services - Webinar Set-Up &amp; Customization</fullName>
            </value>
            <value>
                <fullName>Charge - FEM Additional Minutes</fullName>
            </value>
            <value>
                <fullName>Charge - Full Event Moderation Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>