force-app/main/default/objects/OtherChargeCredit__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Operator Assisted Error - Intercall</fullName>
            </value>
            <value>
                <fullName>Operator Assisted Error - Level 3</fullName>
            </value>
            <value>
                <fullName>Operator Assisted Error- PGi</fullName>
            </value>
            <value>
                <fullName>Provider Technical Failure - Intercall</fullName>
            </value>
            <value>
                <fullName>Provider Technical Failure - Level 3</fullName>
            </value>
            <value>
                <fullName>Provider Technical Failure- PGi</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Service - GX Outage</fullName>
            </value>
            <value>
                <fullName>Service - Intercall Outage</fullName>
            </value>
            <value>
                <fullName>Service- PGi Outage</fullName>
            </value>
            <value>
                <fullName>Service - RT Outage</fullName>
            </value>
            <value>
                <fullName>Setup Error - RT</fullName>
            </value>
            <value>
                <fullName>Subscription Frequency Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>