force-app/main/default/objects/OtherChargeCredit__c/fields/RT_OtherChargeorCredit_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_OtherChargeorCredit_Id__c</fullName>
    <description>Migration</description>
    <externalId>true</externalId>
    <label>RT OtherChargeorCredit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>