force-app/main/default/objects/OtherChargeCredit__c/fields/RTEventName__c.field-meta.xml
<CustomField>
    <fullName>RTEventName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>RT Event Name</label>
    <referenceTo>RTEvent__c</referenceTo>
    <relationshipLabel>Other Charges Credits</relationshipLabel>
    <relationshipName>OtherChargesCredits</relationshipName>
    <type>Lookup</type>
</CustomField>