force-app/main/default/objects/OtherChargeCredit__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>