force-app/main/default/objects/OtherChargeCredit__c/validationRules/Credits_Must_Be_Submitted_by_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Credits_Must_Be_Submitted_by_Approval</fullName>
    <active>true</active>
    <description>Credits are to be submitted through the approval process in SF Requests tickets.</description>
    <errorConditionFormula>AND( 
OR(ChargeOrCredit__c &lt; -100), 
OR( 
$Profile.Name = &quot;ReadyTalk Account Executive&quot;, 
$Profile.Name = &quot;ReadyTalk Sales User&quot;, 
$Profile.Name = &quot;ReadyTalk Event Manager&quot;, 
$Profile.Name = &quot;ReadyTalk Finance&quot;, 
$Profile.Name = &quot;ReadyTalk Marketing User&quot;, 
$Profile.Name = &quot;ReadyTalk Support&quot;) 
)</errorConditionFormula>
    <errorMessage>You must submit credits through the approval process.</errorMessage>
</ValidationRule>