force-app/main/default/objects/OtherChargeCredit__c/validationRules/Require_Reason_For_Credits.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_For_Credits</fullName>
    <active>true</active>
    <description>Requires a reason to be selected for credits.</description>
    <errorConditionFormula>AND( 
ISBLANK(TEXT( Reason__c )), 
CONTAINS( TEXT(Product__c) ,&apos;Credit&apos;))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please select a reason for the credit and save again.</errorMessage>
</ValidationRule>