force-app/main/default/objects/OtherChargeCredit__c/listViews/Created_last_30_days.listView-meta.xml
<ListView>
    <fullName>Created_last_30_days</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>BilledDate__c</columns>
    <columns>AccessCode__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Charge_Product__c</columns>
    <columns>RTEventName__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Created last 30 days</label>
    <language>en_US</language>
</ListView>