force-app/main/default/objects/OtherChargeCredit__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>AccessCode__c</columns>
    <columns>Account_Name__c</columns>
    <columns>BilledDate__c</columns>
    <columns>ChargeOrCredit__c</columns>
    <columns>FinReq_Comments__c</columns>
    <columns>Internal_Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <language>en_US</language>
</ListView>